--- a/.github/workflows/update-feed.yaml
+++ b/.github/workflows/update-feed.yaml
@@ -5,8 +5,10 @@ on:
     branches:
       - main
   schedule:
-    # just after Mid-night
-    - cron: "5 8 * * *"
+    # Adjust refresh schedule here. By default, it runs once per day.
+    # Syntax reference: https://docs.github.com/en/actions/reference/events-that-trigger-workflows#schedule
+    # Recommended tool: https://crontab.guru/
+    - cron: "0 0 * * *"
 
 jobs:
   build:
