--- a/.github/workflows/update-feed.yaml
+++ b/.github/workflows/update-feed.yaml
@@ -20,8 +20,10 @@ jobs:
         uses: actions/setup-node@v2.1.4
         with:
           node-version: "14"
+      - name: Install osmosfeed
+        run: npm i @osmoscraft/osmosfeed@^1.0.0
       - name: Build the feed
-        run: npx @osmoscraft/osmosfeed
+        run: npx osmosfeed
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
