--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -1,4 +1,4 @@
-# cacheUrl: https://GITHUB_USERNAME.github.io/REPO_NAME/cache.json
+ cacheUrl: https://tanzeel159.github.io/RSS-Feed/cache.json
 sources:
   - href: https://github.com/osmoscraft/osmosfeed/releases.atom # Get new feature announcement via this feed
   - href: https://css-tricks.com/feed/
